[package]
name = "packnback"
version = "0.1.0"
authors = ["Andrew Chambers <andrewchambers@fastmail.com>"]
edition = "2018"

[dependencies]

clap = "*"
tempdir = "*"
rand = "*"
fs2 = "*"
atty = "*"

[dependencies.hex]
path = "../hex"

[dependencies.haclstar]
path = "../haclstar"

[dependencies.asymcrypt]
path = "../asymcrypt"